# PyXfem

./: .buildinfo  .gitignore  .style.yapf  Dockerfile  LICENSE  README  README.md  __init__.py  environment.yml  genindex.html  index.html  main.py  main_test1_two_layer.py  main_test3_three_layer.py  objects.inv  profile_results.prof  py-modindex.html  pyproject.toml  requirements.txt  run_test.py  search.html  searchindex.js  setup.py  untitled.geo
SAcouS/: Materials.py  Mesh.py  PostProcess.py  input_parse.py  main.py  two_fluid.axi
_modules/: index.html
_sources/: index.rst.txt
_static/: documentation_options.js
acxfem/: __init__.py  basis.py  dofhandler.py  physic_assembler.py  polynomial.py  postprocess.py  precompute_matrices.py  precompute_matrices_lag.py  quadratures.py  solver.py
acxmor/: modal_reduction.py
acxtmm/: adm_assembler.py  adm_basis.py
analytical/: Biot_sol.py  Fluid_Biot_sol.py  __init__.py  fluid_sol.py
api_reference/: acxfem.html  acxmor.html  acxtmm.html  index.html  interface.html  materials.html  mesh.html  postprocess.html
developer_guide/: architecture.html  contributing.html  testing.html
docs/: README.md  requirements.txt
examples/: gallery.html  index.html
fem/: BCs_impose.py  __init__.py  assembly.py  basis.py  dofhandler.py  materials.py  mesh.py  physic_assembler.py  polynomial.py  postprocess.py  precompute_matrices.py  quadratures.py  solver.py  utilities.py
mor/: modal_reduction.py
src/: analytical_sol.py  assembly.py  basis.py  dofhandler.py  materials.py  mesh.py  polynomial.py  postprocess.py  solver.py  (+3 more)
(+166 files in other folders)
