[build-system]
requires = ["setuptools", "wheel"]

[project]
name = "PyAcoustiX"
version = "0.9.13"
description = "A pure Python package/software for acoustic analysis"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Shaoqi WU", email = "shaoqiwu@outlook.com"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]


dependencies = [
"matplotlib==3.7.0",
"numpy==1.23.5",
"numba>=0.54.4",
"scipy==1.10.0",
"pymls==1.8.0",
"meshio>=5.0.0",
]

[project.optional-dependencies]
all = ["pymls"]

[project.entry-points.console_scripts]
sacous = "SAcouS.__main__:main"

[project.urls]
homepage = "https://github.com/Shaoqigit/PyXfem"
